cluster/apps/office-touchpad/deployment.sops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: office-touchpad
    namespace: office-touchpad
    annotations:
        keel.sh/policy: minor
        keel.sh/approvals: "1"
        keel.sh/trigger: poll
        keel.sh/pollSchedule: '@every 1h'
spec:
    replicas: 1
    selector:
        matchLabels:
            app: office-touchpad
    template:
        metadata:
            labels:
                app: office-touchpad
        spec:
            nodeSelector:
                kubernetes.io/arch: amd64
            containers:
                - name: office-touchpad
                  image: ENC[AES256_GCM,data:LcmS0Ztq4epe/Hoof66ct37vV1gksQQ4PBCfg2POB4ZCo7V/t19+II0LDi9lJsU=,iv:hsM/o7PljK3fA3fNY3zwiuWP/1Okmcier329k9wSw5I=,tag:C6E+f9D3eyTWQqmt0e8uWQ==,type:str]
                  resources:
                    requests:
                        cpu: 100m
                        memory: 128Mi
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-10-31T04:01:19Z"
    mac: ENC[AES256_GCM,data:tNdbu8+RExxVSUCWJwsJkkIWo2YSmE6Rj3pIKABI2zJ/auY54F6qKF0WUw/bh0vOSei0TtRpgC/TgkWlge7jU/KCXZpNCrBYjsskqT55uVx52SV9pANxGkYHKGwQr1AEG8jaGMHmdOeT+s4OKxS31JFdSeqyDCZaZ9AaSRB6Isw=,iv:ThNlvRIXpraz5IShxmxUuro9GtsA0/vz3hZ9R4bWyYk=,tag:VVBdLjTyRLEQT8e51PpaRw==,type:str]
    pgp:
        - created_at: "2021-10-31T03:55:48Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkARAAuHgI2vGSPLIxblb8hsysHmSRfANmeNdU9mUJwGhOzIiA
[...]
            =Rgs/
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image)$
    version: 3.7.1
