cluster/apps/office-touchpad/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: office-touchpad
    namespace: office-touchpad
    annotations:
        keel.sh/policy: minor
        keel.sh/approvals: "1"
        keel.sh/trigger: poll
        keel.sh/pollSchedule: '@every 1h'
spec:
    replicas: 1
    selector:
        matchLabels:
            app: office-touchpad
    template:
        metadata:
            labels:
                app: office-touchpad
        spec:
            nodeSelector:
                kubernetes.io/arch: amd64
            containers:
                - name: office-touchpad
                  image: fdrake/office-touchpad
                  resources:
                    requests:
                        cpu: 100m
                        memory: 128Mi
