cluster/apps/office-touchpad/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: office-touchpad
    namespace: office-touchpad
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
    labels:
        app.kubernetes.io/instance: office-touchpad
        app.kubernetes.io/name: office-touchpad
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:2e2JS0qf1TH60PgwuXJhVJO3L8tRDuaBGNyIEN64Iunw2GZ+I5A=,iv:Nk5/P6yA/iSc6cZPBeBYG85f6n2I9dqI254pGN27uLE=,tag:t59GYWRfTZu7zYhcu5uJgw==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: office-touchpad
                        port:
                            number: 80
    tls:
        - hosts:
            - ENC[AES256_GCM,data:h1h7h1d4QtIP/kFcBWkOfDFCbeE+W2JzTiFnt20li2d7O6HIc5U=,iv:b6la+K0GzSHuLIysBjMY+q4fGgpXiLdyKhioby/UYjc=,tag:HIeLv6B4mOnKua7mi3diwg==,type:str]
          secretName: office-touchpad-app-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-10-31T03:55:58Z"
    mac: ENC[AES256_GCM,data:58lYrj8SIfPQuSU9VXTdw9ZayGmUcj2AjtPPgCMJg32kk4Gm2UU8BaTWoCVjtEuwOIX5TdDfjrGt3xEY9VIgocYayiVxaYKchRviIKmU5EtmW040NsPiSNbf4ceJxISgLHkEasgNtGqprstULhIyZwmzxfODuB3ExvS8VSj0Vc8=,iv:2L0t/ErGiwTN0BKZsX+qyqaSInmYG/KaLAcpuC+GTd4=,tag:Uyl0msbMFOqID153cpydoQ==,type:str]
    pgp:
        - created_at: "2021-10-31T03:55:57Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkAQ//bpavhnk1hPjEBUKGb9PcFgMPV88AM2KWthIVSs+GwDJj
[...]
            =FtT7
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image)$
    version: 3.7.1
